Tests/4-java/src/imt.fil.a3/recherche.fj/parser/error/VariableNotFound.java
package imt.fil.a3.recherche.fj.parser.error;

public final class VariableNotFound extends TypeError {
    public final String name;

    public VariableNotFound(String name) {
        this.name = name;
    }
}
